# trade-frame

./: .gitignore  BuildNotes.txt  CMakeLists.txt  LICENSE.txt  README.md  TradeFrame.sln  TradingIdeas.txt  TradingSoftware.sln  c++ reference.txt  frames.doc  mssccprj.scc  notes.txt  sedgcc.sh  symbol stats.txt  vssver2.scc  wtl sites.txt  wx sites.txt  wxbuild.txt
BasketTrading/: AcquireFundamentals.cpp  AcquireFundamentals.h  BasketTrading.cpp  BasketTrading.h  BasketTrading.rc  BasketTrading.vcxproj  BasketTrading.vcxproj.filters  BuildInstrument.cpp  BuildInstrument.h  CMakeLists.txt  Config.cpp  Config.h  Config.hpp  DailyHistory.cpp  DailyHistory.h  HistoryRequest.cpp  HistoryRequest.h  LegSelected.cpp  LegSelected.h  ManagePortfolio.cpp  ManagePortfolio.h  ManagePosition.cpp  ManagePosition.h  ManageStrategy.cpp  ManageStrategy.h  ManageStrategy.hpp  ManageStrategyMisc.cpp  MasterPortfolio.cpp  MasterPortfolio.h  MasterPortfolio.hpp  MoneyManager.cpp  MoneyManager.h  MoneyManager.hpp  OptionRegistry.cpp  OptionRegistry.hpp  OptionStatistics.cpp  OptionStatistics.hpp  PanelBasketTradingMain.cpp  PanelBasketTradingMain.h  PanelPortfolioStats.cpp  (+31 more)
BasketTrading/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
DepthOfMarket/: AppDoM.cpp  AppDoM.h  CMakeLists.txt  Config.cpp  Config.h  DoMDispatch.cpp  DoMDispatch.h  PanelStatistics.cpp  PanelStatistics.hpp  README.md
Dividend/: CMakeLists.txt  Config.cpp  Config.hpp  DbRecordDividend.cpp  DbRecordDividend.hpp  DbRecordSymbol.cpp  DbRecordSymbol.hpp  DbRecordTag.cpp  DbRecordTag.hpp  Dividend.cpp  Dividend.hpp  Process.cpp  Process.hpp  README.md  TableSymbol.hpp  TableTag.cpp  main.cpp
ESBracketOrder/: AppESBracketOrder.cpp  AppESBracketOrder.h  CMakeLists.txt  Merrill.cpp  Merrill.h  Strategy.cpp  Strategy.h
HedgedBollinger/: CMakeLists.txt  EventDrawChart.cpp  EventDrawChart.h  EventUpdateOptionTree.cpp  EventUpdateOptionTree.h  HedgedBollinger.cpp  HedgedBollinger.h  HedgedBollinger.rc  HedgedBollinger.vcxproj  HedgedBollinger.vcxproj.filters  PositionState.cpp  PositionState.h  Resource.h  Strategy1.cpp  Strategy1.h  Trader.cpp  Trader.h  stdafx.cpp  stdafx.h  targetver.h
HedgedBollinger/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
IndicatorTrading/: 200DayChart.cpp  200DayChart.hpp  AppIndicatorTrading.cpp  AppIndicatorTrading.h  AppIndicatorTrading.hpp  CMakeLists.txt  Config.cpp  Config.h  Config.hpp  ControlExec.cpp  ControlExec.hpp  DailyHistory.cpp  DailyHistory.hpp  ExecControl.cpp  ExecControl.hpp  ExecModel.cpp  ExecModel.hpp  FeedModel.cpp  FeedModel.hpp  Indicators.hpp  InteractiveChart.cpp  InteractiveChart.h  InteractiveChart.hpp  ModelExec.cpp  ModelExec.hpp  ModelFeed.cpp  ModelFeed.hpp  MovingAverage.cpp  MovingAverage.hpp  OptionTracker.cpp  OptionTracker.hpp  PriceLevelOrder.cpp  PriceLevelOrder.hpp  README.md  SessionChart.cpp  SessionChart.hpp  Stochastic.cpp  Stochastic.hpp  Strategy.cpp  Strategy.hpp  (+4 more)
SP500/: AppSP500.cpp  AppSP500.hpp  AppSP500_cli.cpp  AppSP500_gui.cpp  AppSP500_gui.hpp  CMakeLists.txt  Config.cpp  Config.hpp  CrossingEvent.cpp  CrossingEvent.hpp  CubicRegression.cpp  DQN_Model.cpp  DQN_Model.hpp  DQN_Module.cpp  DQN_Module.hpp  Features.cpp  Features.hpp  Flags.hpp  HyperParameters.hpp  LSTM.cpp  LSTM.hpp  LSTMModel.cpp  LSTMModel.hpp  Model.cpp  Model.hpp  README.md  StateMachine_Order.cpp  StateMachine_Order.hpp  Strategy.cpp  Strategy.cpp.tmp  Strategy.hpp  StrategyManager.cpp  StrategyManager.hpp  StrategyManager_impl.cpp  StrategyManager_impl.hpp  TimeSeriesModel.cpp  TimeSeriesModel.hpp  TimeSeriesView.cpp  TimeSeriesView.hpp  Torch.cpp  (+1 more)
WebTrader/: AppManager.cpp  AppManager.hpp  AppWebTrader.cpp  AppWebTrader.hpp  CMakeLists.txt  Config.cpp  Config.hpp  README.md  Server.cpp  Server.hpp  Server_impl.cpp  Server_impl.hpp  main.cpp
lib/: CMakeLists.txt  junction links only here.txt
lib/DBDividend/: CMakeLists.txt  TableDaily.cpp  TableDaily.hpp  TableDividend.cpp  TableDividend.hpp  TableDividendDaily.cpp  TableDividendDaily.hpp  TableSymbol.cpp  TableTag.hpp
lib/DEA/: Account.cpp  Account.h  AccountsManager.cpp  AccountsManager.h  CMakeLists.txt  ChartOfAccounts.cpp  ChartOfAccounts.h  DEA.vcxproj  DEA.vcxproj.filters  GeneralJournal.cpp  GeneralJournal.h  GeneralJournalEntry.cpp  GeneralJournalEntry.h  KeyTypes.cpp  KeyTypes.h  Privilege.cpp  Privilege.h  User.cpp  User.h
lib/ExcelFormat/: BasicExcel.cpp  BasicExcel.hpp  CMakeLists.txt  Examples.cpp  ExcelFormat.cpp  ExcelFormat.dsp  ExcelFormat.dsw  ExcelFormat.h  ExcelFormat.sln  ExcelFormat.vcproj  ExcelFormat.vcxproj  ExcelFormat.vcxproj.filters  Makefile  notes2.txt
lib/OUAuth/: AuthManager.cpp  AuthManager.h  KeyTypes.cpp  KeyTypes.h  OUAuth.vcxproj  OUAuth.vcxproj.filters  Privilege.cpp  Privilege.h  User.cpp  User.h
lib/OUBerkeleyDb/: AutoIncKeys.h  BerkeleyDb.h  EnvManager.cpp  EnvManager.h  KeyValuePair.cpp  KeyValuePairs.cpp  LibBerkeleyDb.vcproj  LibBerkeleyDb.vcxproj  stdafx.cpp
lib/OUCharting/: CMakeLists.txt  ChartControls.cpp  ChartControls.h  ChartDVBasics.cpp  ChartDVBasics.h  ChartDataBase.cpp  ChartDataBase.h  ChartDataView.cpp  ChartDataView.h  ChartEntryBars.cpp  ChartEntryBars.h  ChartEntryBase.cpp  ChartEntryBase.h  ChartEntryHistogram.cpp  ChartEntryHistogram.hpp  ChartEntryHistogramV2.cpp  ChartEntryHistogramV2.hpp  ChartEntryIndicator.cpp  ChartEntryIndicator.h  ChartEntryMark.cpp  ChartEntryMark.h  ChartEntryPrice.cpp  ChartEntryPrice.h  ChartEntrySegments.cpp  ChartEntrySegments.h  ChartEntryShape.cpp  ChartEntryShape.h  ChartEntryVolume.cpp  ChartEntryVolume.h  ChartInstrumentTree.cpp  ChartMaster.cpp  ChartMaster.h  ChartRealTimeContainer.cpp  ChartRealTimeController.cpp  ChartRealTimeModel.cpp  ChartRealTimeTreeView.cpp  ChartRealTimeTreeView.h  ChartRealTimeView.cpp  ChartViewPort.cpp  ChartViewPort.h  (+5 more)
lib/OUCommon/: CharBuffer.h  (+49 more)
(+2761 files in other folders)
