# trade-frame libs
cmake_minimum_required (VERSION 3.13)

project(trade-frame-libs)

add_subdirectory(DEA)
add_subdirectory(ExcelFormat)
#add_subdirectory(OUAuth)
#add_subdirectory(OUBerkeleyDb)
add_subdirectory(OUCharting)
add_subdirectory(OUCommon)
add_subdirectory(DBDividend)
add_subdirectory(OUFormulas)
add_subdirectory(OUGP)
#add_subdirectory(OUPostgresql)
add_subdirectory(OUSound)
add_subdirectory(OUSQL)
add_subdirectory(OUSqlite)
add_subdirectory(OUStatistics)
#add_subdirectory(OUWtlCommon)
#add_subdirectory(OUWtlHeaders)
#add_subdirectory(rapidxml)
add_subdirectory(TFAlpaca)
add_subdirectory(TFBitsNPieces)
add_subdirectory(TFFreeRadicals)
add_subdirectory(TFGP)
add_subdirectory(TFHDF5TimeSeries)
add_subdirectory(TFIndicators)
add_subdirectory(TFInteractiveBrokers)
add_subdirectory(TFIQFeed)
#add_subdirectory(TFIQFeed32)
add_subdirectory(TFOptions)
add_subdirectory(TFOptionCombos)
add_subdirectory(TFPhemex)
add_subdirectory(TFSimulation)
add_subdirectory(TFStatistics)
add_subdirectory(TFTimeSeries)
add_subdirectory(TFTrading)
add_subdirectory(TFVuTrading)

